env/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: foo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $NAME_APP-service
                port:
                  number: 8080
  tls:
    - hosts:
        - foo.com
      secretName: foo-tls
